project_sources/collector/fixtures/powershell_analysis/bad/write_host.ps1
$Status = "FAIL"
Write-Host "Validation status: $Status"
